--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ streamlit==1.39.0
 transformers==4.52.4
 xgboost==2.1.4
 yfinance==0.2.61
-newsapi-python  # No version available programmatically; install latest
+newsapi-python
