--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-joblib==1.4.2
-matplotlib==3.9.2
-numpy==1.26.4
-pandas==2.2.3
-shap==0.47.2
-scikit-learn==1.5.1
 streamlit==1.39.0
+pandas==2.2.3
+numpy==1.26.4
+matplotlib==3.9.0
+scikit-learn==1.5.0
+xgboost==2.0.3
+yfinance==0.2.36
+shap==0.45.0
+transformers==4.41.1
+joblib==1.4.2
+newsapi-python==0.2.6
